<resources>
    <string name="app_name">GridImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="filter_item_label">Filter</string>
    <string name="share_item_label">Share</string>
    <string name="search_prompt">Enter Search Query</string>
    <string name="Save">Search</string>
    <string name="ImageTitleLabel">Image Title</string>
    <string name="title_activity_image_display">FullImage</string>
    <string name="title_activity_filter">filter</string>
    <string name="Advanced_Search_Option_Label">Advanced Search Option</string>
    <string name="ImageSizeLabel">Image Size</string>
    <string name="ColorFilterLabel">Color Filter</string>
    <string name="ImageTypeLabel">Image Type</string>
    <string name="SiteFilterLabel">Site Filter</string>
    <string name="SaveLabel">Save</string>

    <string-array name="size_array">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="type_array">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string-array name="color_array">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

</resources>
